[project]
authors = [{name = "Pedro Juan Royo", email = "pedro.juan.royo@gmail.com"}]
dependencies = [
    "ovito>=3.15",
    "numpy"
]
name = "vizmol"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
vizmol = "vizmol.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
vizmol = { path = ".", editable = true }

[tool.pixi.tasks]
